2000-04-14  Lauris Kaplinski <lauris@ariman.ee>

	* Makefile.am: fixed .desktop inclusion to distribution

2000-04-12  Pablo Saratxaga Pablo <pablo@mandrakesoft.com>

	* configure.in (ALL_LINGUAS): Add Danish

200-04-09  Lauris Kaplinski  <lauris@ariman.ee>

	* bonobo/canvas-translator.*: implemented a translator group, which
          translates xlib canvas calls to antialiased canvas ones.
	
200-04-09  Lauris Kaplinski  <lauris@ariman.ee>

	* document.c: Removed bad memory corruption bug in ::destroy
	* embeddable-document.c: Added PersistentFile interface
	* embeddable-drawing.*: Added BonoboCanvasComponent interface
	
200-04-08  Lauris Kaplinski  <lauris@ariman.ee>

	* Makefile.am: create sodipodi-bonobo symlink if we use bonobo
	* src/sodipodi/*: Added bonobo component, nothing interesting yet
	
200-04-07  Lauris Kaplinski  <lauris@ariman.ee>

	* sodipodi.gnorba: added this, embeddable document will follow soon
	* configure.in: added bonobo check
	
200-04-07  Lauris Kaplinski  <lauris@ariman.ee>

	* sp-shape.c: It prints now semitransparent shapes, rendering these
          to bitmaps. No clipping yet and resolution is hardcoded to 72dpi
	
200-04-05  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Added no to ALL_LINGUAS.
	
2000-04-05  Lauris Kaplinski <lauris@ariman.ee>

    * sp-document.c, sp-file.c, sp-image.c: removed namespace. How to
      extract this correctly from libxml?

2000-04-05  Lauris Kaplinski <lauris@ariman.ee>

    * xml/repr.c: added order_changed_pre callback
    * document-undo.c: stacking order changes are now undoable
    * sp-document.c, sp-file.c, sp-image.c: added namespace "sodipodi",
      still have to do official definition

2000-04-04  Lauris Kaplinski <lauris@ariman.ee>

    * xml/repr-io.c: save DTD & standard header
    * dialogs/object-*: modify default fill & stroke, if nothing selected

2000-04-04  Lauris Kaplinski <lauris@ariman.ee>

    * selection.*: Added functions to select via reprs (now when we have